[package]
name = "snake"
version = "0.1.0"
authors = ["fimmind <fimmind@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
lazy_static = "1.4.0"
rand = "0.7.3"
ndarray = "0.13.1"
itertools = "0.9.0"
clap = "2.33.3"
